--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="index.html">Home Page</a></li>
                 <li><a href="submit-name.html">Submit a Name</a></li>
-                <li><a href="contact-as.html">Contact Us</a></li>
+                <li><a href="contact-us.html">Contact Us</a></li>
             </ul>
         </nav>
         <!-- In the header above, add your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
