--- a/submit-name.html
+++ b/submit-name.html
@@ -17,32 +17,57 @@
             <ul>
                 <li><a href="index.html">Home Page</a></li>
                 <li><a href="submit-name.html">Submit a Name</a></li>
-                <li><a href="contact-as.html">Contact Us</a></li>
+                <li><a href="contact-us.html">Contact Us</a></li>
             </ul>
         </nav>
         <!-- In the header above, add your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <div class="image">
         <div id="fondo" class="barner-box">
-            <h1>Improve your Lifestyle</h1>
-            <h2>Joe Candelario</h2>
-            <h2>WDD 130-18</h2>
+            <h1>Submit a Name</h1>
+
         </div>
     </div>
 
 
     <!-- ------------------------Steps 2-3------------------------------ -->
+    <div id="body">
 
-    <h3>Submit a Name</h3>
-    <p>
-        You must send us your first and last name followed by your feelings regarding how you currently see your life and where you want to go, also send us a question to see how we can help you, and we will address your concerns here.
-    </p>
-    <p>Images for the Page 2</p>
-    <ul>
-        <li><img src="https://los40es00.epimg.net/los40/imagenes/2020/05/22/actualidad/1590154267_141561_1590154356_noticia_normal.jpg" alt="image for page"></li>
-        <li><img src="https://cdn2.salud180.com/sites/default/files/styles/medium/public/field/image/2013/07/evasiondeemociones.jpg" alt="image for page"></li>
+        <div id="block">
+            <h3>Please Note!</h3>
+            <p id="text">
+                You must send us your first and last name followed by your feelings regarding how you currently see your life and where you want to go, also send us a question to see how we can help you, and we will address your concerns here.
+            </p>
+        </div>
+        <div id="form">
+            <section class="form-register">
+                <h4>Formulario Registro</h4>
 
-    </ul>
+                <input class="controls" type="text" name="name" id="name" placeholder="Insert First Name">
+
+                <input class="controls" type="text" name="lastname" id="lastname" placeholder="Insert Last Name">
+
+                <input class="controls" type="phone" name="phone" id="phone" placeholder="Insert Phone number">
+
+                <input class="controls" type="email" name="email" id="email" placeholder="Insert Email">
+
+
+                <input class="controls1" type="text" name="adress" id="adress" placeholder="Insert Adress">
+
+                <input class="controls1" type="text" name="adress2" id="adress2" placeholder="Insert Adress Line 2">
+
+                <input class="controls2" type="text" name="message" id="message" placeholder="Insert Message">
+
+
+
+
+                <input class="botons" type="submit" value="Save">
+
+            </section>
+
+        </div>
+
+    </div>
     <div class="footer">
         <footer>
             <p>&copy; 20XX Dry Oar - Joe Candelario - WDD 130-18</p>
